<resources>
    <string name="app_name">AprendiX</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="hint_usuario">Escribe tu usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="escribe_tu_contrase_a">Escribe tu contraseña</string>
    <string name="btn_inicia_sesion">Inicia sesion</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="ingresa_tu_email">Ingresa tu email</string>
    <string name="resgistrate">Resgistrate</string>


    <string name="open_nav">Abrir Menu</string>
    <string name="close_nav">Cerrar Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questions_test">Preguntas</string>
    <string name="formulario_de_registro">Formulario de registro</string>
    <string name="error">ERROR!</string>
    <string name="usuario_o_contrase_a_inv_lidos">Usuario o Contraseña inválidos</string>
    <string name="next_action">Continuar</string>
    <string name="score">Score</string>


</resources>