<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="323dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="@drawable/iaprendix_logocompleto__1_" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:backgroundTint="@color/white_background"
        app:strokeColor="@color/azul_borde"
        app:cardElevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_15dp"
        android:elevation="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="@dimen/_20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_usuario"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:textColor="@color/black"
                android:fontFamily="@font/sansita"
                android:text="@string/nombre_usuario"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.301"/>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black"
                android:textColorHint="@color/azul_splash"
                app:boxCornerRadiusBottomStart="@dimen/_20dp"
                android:hint="@string/hint_usuario"
                app:boxCornerRadiusTopEnd="@dimen/_20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_usuario_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_contrasena"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:fontFamily="@font/sansita"
                android:textColor="@color/black"
                android:text="@string/contrase_a"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_usuario"
                app:layout_constraintVertical_bias="0.0" />


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20dp"
                app:boxCornerRadiusBottomStart="@dimen/_20dp"
                android:hint="@string/escribe_tu_contrase_a"
                android:textColorHint="@color/azul_splash"
                app:boxCornerRadiusTopEnd="@dimen/_20dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/azul_splash"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_contrasena_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:fontFamily="@font/sansita"
                android:paddingStart="@dimen/_20dp"
                android:paddingEnd="@dimen/_20dp"
                android:text="@string/btn_inicia_sesion"
                android:background="@drawable/bottom_border"
                android:textColor="@color/azul_splash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_contrasena"
                app:layout_constraintVertical_bias="0.138" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnResgistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"

                android:fontFamily="@font/sansita"
                android:text="@string/resgistrate"
                android:paddingStart="@dimen/_20dp"
                android:paddingEnd="@dimen/_20dp"
                android:textColor="@color/azul_splash"
                android:background="@drawable/bottom_border"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/btn_ingresar"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.138" />


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

